tests/rt/pos/ifc/sandbox/s06.trp
let fun f() = _debug (1); sleep (2000); _debug (2)
    val (2, resume) = sandbox (1000, f)
in  resume 3000
end
