tests/rt/neg/core/serialize04.trp
(* negative test checking the interaction between sandboxing and serialization; 
   resumption konts that we receive from the sandbox must not be serializable

*)


let fun f() = _debug (1); sleep (2000); _debug (2)
    val (2, resume) = sandbox (1000, f)
in  save ("serialize04", resume)
end
